# pokernow-cli

./: .rustfmt.toml  CLAUDE.md  Cargo.toml  POKERNOW.md  README.md
.github/workflows/: ci.yml
skills/: SKILL.md
src/: card.rs  config.rs  display.rs  ev.rs  lib.rs  main.rs  parser.rs  parser_log.rs  ranking.rs  search.rs  stats.rs  summary.rs
tests/: integration.rs
tests/fixtures/: sample.json  sample2.json
